# library_book_manager

./: CMakeLists.txt  LICENSE  README.md
src/: lib_sample_data.json  main.cpp  sample__struct book.txt  sample_users.json
src/classes/: Book.h  Library.h  User.h
src/func/: functions.cpp
src/functions/: BookLendHistory_UpdateBorrow.cpp  BookLendState_UpdateGiveback.cpp  GetCurrentTime.cpp  GetTimeInput.cpp  LibraryBookIDSearch.cpp  LibraryBookISBNSearch.cpp  LibraryBookNameSearch.cpp  LibraryBook_Append.cpp  LibraryBook_Append_Update_Delete_Director.cpp  LibraryBook_Copy.cpp  LibraryBook_Delete_fast.cpp  LibraryBook_Update.cpp  LibraryBook_Update_Copy_Delete_Director.cpp  Library_DeletedBooks_sort.cpp  UserBookBorrow.cpp  UserBookGiveback.cpp  UserBookHistory_UpdateGiveback.cpp  UserBrrwHistory_UpdateBorrow.cpp  UserID_Exist.cpp  UserValidation_Search_Borrow.cpp  UserValidation_Search_Giveback.cpp  User_BorrowedBook_ISBNSearch.cpp  User_BorrowedBook_NameSearch.cpp
src/functions/borrow_history/: UpdateUserBorrowHistory.cpp  UpdateUserGivebackHistory.cpp
src/functions/menus/: BorrowAndGiveBackMenu.cpp  DataBackupAndRestoreMenu.cpp  LibraryBookAppendUpdateDeleteDirector.cpp  LibrarySearchMenu.cpp  Library_User_infoMenu.cpp  ShowMainMenu.cpp  UserBorrowAndGiveBackMenu.cpp  UserManagement.cpp
src/functions/utils/: GetCurrentTime.cpp  GetTimeInput.cpp  isFileExist.cpp
src/functions/utils/KMP/: kmp_algorithms.cpp  kmp_algorithms_definition.h
src/headers/: function_definitions.h  macro.h  struct.h
src/include/: fmt.h  function_definitions.h  macro.h  main.h  struct.h
src/include/fmt/: args.h  chrono.h  color.h  core.h  fmt.cc  format.h  os.cc  os.h  ostream.h  std.h  xchar.h
src/utils/: constant_definitions.h
